GCCA as preprocessing

--- a/Two_Obj_Ol.ipynb
+++ b/Two_Obj_Ol.ipynb
@@ -810,21 +810,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nested_datalist = [modal[0] for modal in comb_dict_SO.values()]\n",
-    "# nested_dimlist = [modal[1] for modal in comb_dict_SO.values()]\n",
-    "# mod_name_list = list(comb_dict.keys())\n",
-    "# L_list = [5]*len(nested_datalist)\n",
-    "# offset_list = [2]*len(nested_datalist)\n",
-    "# W_list = [None]*len(nested_datalist)\n",
-    "# pipe_GCCA(nested_datalist, fs, L_list, offset_list, mod_name_list, W_list, nested_dimlist, GCCA_figure_path, GCCA_table_path, SINGLEOBJ=True,  OVERWRITE=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "reg_gcca_dict_SO = {'EEG-EOG': regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, modal_dict_SO['EOG'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
     "             'EEG-GAZE_V': regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, modal_dict_SO['GAZE_V'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
     "             'EEG-EOG&GAZE_V': regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, comb_dict_SO['EOG+GAZE_V'][0], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0)}"
@@ -880,21 +865,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nested_datalist = [modal[0] for modal in comb_dict.values()]\n",
-    "# nested_dimlist = [modal[1] for modal in comb_dict.values()]\n",
-    "# mod_name_list = list(comb_dict.keys())\n",
-    "# L_list = [5]*len(nested_datalist)\n",
-    "# offset_list = [2]*len(nested_datalist)\n",
-    "# W_list = [None]*len(nested_datalist)\n",
-    "# pipe_GCCA(nested_datalist, fs, L_list, offset_list, mod_name_list, W_list, nested_dimlist, GCCA_figure_path, GCCA_table_path, SINGLEOBJ=False,  OVERWRITE=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "reg_gcca_dict = {'EEG-EOG': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['EOG'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
     "             'EEG-GAZE_V': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['GAZE_V'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
     "             'EEG-EOG&GAZE_V': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, comb_dict['EOG+GAZE_V'][0], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0)}"
@@ -913,6 +883,61 @@
     "W_list = [None]*len(nested_datalist)\n",
     "nested_dimlist = [None]*len(nested_datalist)\n",
     "pipe_GCCA(nested_datalist, fs, L_list, offset_list, mod_name_list, W_list, nested_dimlist, GCCA_figure_path, GCCA_table_path, SINGLEOBJ=False, OVERWRITE=True, FM_ORG=[5 ,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GCCA as preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Subj_ID = 0\n",
+    "para_gcca = [5, 2]\n",
+    "para_cca_eeg = [1, 0]\n",
+    "para_cca_stim = [L_Stim, offset_Stim]\n",
+    "GCCA_CCA = algo.GCCAPreprocessedCCA(Subj_ID, modal_dict['EEG'], feat_att_list, fs, para_gcca, para_cca_eeg, para_cca_stim, leave_out=2, n_components=160)\n",
+    "W_GCCA_folds, preprocessed_train_folds, preprocessed_test_folds = GCCA_CCA.get_GCCA_results()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_acc_list = []\n",
+    "GCCA_CCA.n_components = 5\n",
+    "for i in range(1, 33):\n",
+    "    nb_cp = 5*i\n",
+    "    preprocessed_train_part = []\n",
+    "    preprocessed_test_part = []\n",
+    "    for train_mm, test_mm in zip(preprocessed_train_folds, preprocessed_test_folds):\n",
+    "        preprocessed_train_part.append([train_mm[0][:,:nb_cp,:], train_mm[1]])\n",
+    "        preprocessed_test_part.append([test_mm[0][:,:nb_cp,:], test_mm[1]])\n",
+    "    acc_list = []\n",
+    "    GCCA_CCA.preprocessed_train_folds = preprocessed_train_part\n",
+    "    GCCA_CCA.preprocessed_test_folds = preprocessed_test_part\n",
+    "    for Subj_ID in range(nb_subj):\n",
+    "        GCCA_CCA.Subj_ID = Subj_ID\n",
+    "        corr_att_eeg, corr_unatt_eeg = GCCA_CCA.att_or_unatt_trials(feat_unatt_list, trial_len=30)\n",
+    "        acc, _, _, _, _= utils.eval_compete(corr_att_eeg, corr_unatt_eeg, TRAIN_WITH_ATT=True, nb_comp_into_account=3)\n",
+    "        acc_list.append(acc)\n",
+    "    nested_acc_list.append(acc_list)\n",
+    "acc_array = np.array(nested_acc_list)\n"
    ]
   },
   {
