Saccades: subject-independent

--- a/Two_Obj_Ol.ipynb
+++ b/Two_Obj_Ol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,36 +535,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pipe_saccade(nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list=None, BOOTSTRAP=True, n_components=3, nb_comp_into_account=2, table_dir=None, OVERWRITE=False, SYNMASK=False, feat_name='ObjFlow'):\n",
+    "    eeg_multisubj_list, feat_att_list, feat_unatt_list, saccade_multisubj_list = nested_data\n",
+    "    eeg_multisubj_list_aug, feat_att_list_aug, _, saccade_multisubj_list_aug = nested_aug_data\n",
+    "    nb_subj = eeg_multisubj_list[0].shape[2]\n",
+    "    mask_list = None\n",
+    "    mask_list_aug = None\n",
+    "    data_loss = []\n",
+    "    for Subj_ID in range(nb_subj):\n",
+    "        saccade_onesubj_list = [saccade[:,:,Subj_ID] for saccade in saccade_multisubj_list]\n",
+    "        saccade_onesubj_list_aug = [saccade[:,:,Subj_ID] for saccade in saccade_multisubj_list_aug]\n",
+    "        if SYNMASK:\n",
+    "            saccade_onesubj_list = utils.shuffle_datalist(saccade_onesubj_list, 1)\n",
+    "            saccade_onesubj_list_aug = utils.shuffle_datalist(saccade_onesubj_list_aug, 1)\n",
+    "        mask_onesubj_list = utils.get_mask_list(saccade_onesubj_list, before=10, after=30, ThreeD=True)\n",
+    "        mask_onesubj_list_aug = utils.get_mask_list(saccade_onesubj_list_aug, before=10, after=30, ThreeD=True)\n",
+    "        if mask_list is None:\n",
+    "            mask_list = mask_onesubj_list\n",
+    "            mask_list_aug = mask_onesubj_list_aug\n",
+    "        else:\n",
+    "            mask_list = [np.concatenate((mask_prev_subjs, mask), axis=2) for mask_prev_subjs, mask in zip(mask_list, mask_onesubj_list)]\n",
+    "            mask_list_aug = [np.concatenate((mask_prev_subjs, mask), axis=2) for mask_prev_subjs, mask in zip(mask_list_aug, mask_onesubj_list_aug)]\n",
+    "        data_loss_onesubj = utils.data_loss_due_to_mask(mask_onesubj_list+mask_onesubj_list_aug, L_EEG, offset_EEG)\n",
+    "        data_loss.append(data_loss_onesubj)\n",
+    "\n",
+    "    CCA = algo.CanonicalCorrelationAnalysis(eeg_multisubj_list, feat_att_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, n_components=n_components, mask_list=mask_list, leave_out=7)\n",
+    "    res = {Subj_ID: [] for Subj_ID in range(nb_subj)}\n",
+    "    table_name = table_dir + f'{feat_name}_Acc_Train_Aug_Multisubj_Syn_{SYNMASK}.csv'\n",
+    "    for trial_len in trial_len_list:\n",
+    "        print('Trial length: ', trial_len)\n",
+    "        corr_att_eeg, corr_unatt_eeg = CCA.att_or_unatt_aug_multisubj(eeg_multisubj_list_aug, feat_att_list_aug, mask_list_aug, feat_unatt_list, trial_len, BOOTSTRAP)\n",
+    "        for Subj_ID in range(nb_subj):\n",
+    "            acc, _, _, _, _= utils.eval_compete(corr_att_eeg[Subj_ID], corr_unatt_eeg[Subj_ID], TRAIN_WITH_ATT=True, nb_comp_into_account=nb_comp_into_account)\n",
+    "            res[Subj_ID].append(acc)\n",
+    "    for Subj_ID in range(nb_subj):\n",
+    "        utils.save_acc_df(table_name, Subj_ID, trial_len_list, res[Subj_ID], OVERWRITE, data_loss[Subj_ID])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for Subj_ID in Subj_Set:\n",
+    "nested_data = [modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['SACC']]\n",
+    "nested_aug_data = [modal_dict_SO['EEG'], feat_list_SO, None, modal_dict_SO['SACC']]\n",
+    "pipe_saccade(nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dir=table_dirs['EEG'], OVERWRITE=True, SYNMASK=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for run in range(1, 11):\n",
+    "    name = f'Run{run}-ObjFlow'\n",
     "    nested_data = [modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['SACC']]\n",
     "    nested_aug_data = [modal_dict_SO['EEG'], feat_list_SO, None, modal_dict_SO['SACC']]\n",
-    "    pipe_att_or_unatt_aug(Subj_ID, nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dir=table_dirs['EEG'], OVERWRITE=True, SYNMASK=False)"
+    "    pipe_saccade(nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dir=table_dirs['EEG'], OVERWRITE=True, SYNMASK=True, feat_name=name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for run in range(1, 21):\n",
-    "    name = f'Run{run}-ObjFlow'\n",
-    "    for Subj_ID in Subj_Set:\n",
-    "        nested_data = [modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['SACC']]\n",
-    "        nested_aug_data = [modal_dict_SO['EEG'], feat_list_SO, None, modal_dict_SO['SACC']]\n",
-    "        pipe_att_or_unatt_aug(Subj_ID, nested_data, nested_aug_data, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dir=table_dirs['EEG'], OVERWRITE=True, SYNMASK=True, feat_name=name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
