--- a/Two_Obj_Ol.ipynb
+++ b/Two_Obj_Ol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,6 +704,66 @@
     "    for Subj_ID in Subj_Set:\n",
     "        pipe_mm_trials_LVO(Subj_ID, modal[0], feat_att_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_path, MATCHATT=True, dim_list_EEG=modal[1], OVERWRITE=True, nb_comp_into_account=3)\n",
     "        # pipe_mm_trials_LVO(Subj_ID, modal[0], feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_path, MATCHATT=False, dim_list_EEG=modal[1], OVERWRITE=True, nb_comp_into_account=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GCCA with multi-modal data [Not as good as the previous one]\n",
+    "Potential problem: the correlation between, e.g., EEG and GAZE_V, dominates the ISC when the feature is less informative. \n",
+    "Therefore the ISCs under attended and unattended conditions are not well separated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pipe_att_or_unatt_gcca(Subj_ID, nested_datalist, fs, L_list, offset_list, n_components=4, nb_comp_into_account=2, trial_len_list=[15,30,45,60], table_dir=None, OVERWRITE=False, feat_name='ObjFlow'):\n",
+    "    '''\n",
+    "    TASK: Perform GCCA analysis on given modalities (including stimulus features); Attended features and unattended features are discriminated based on ISC.\n",
+    "    nested_datalist: A list of lists of data for each modality. The last modality is the attended stimulus feature. E.g., [EEG_list, EOG_list, feat_att_list, feat_unatt_list]\n",
+    "    The last two lists are the attended and unattended stimulus features, respectively.\n",
+    "    '''\n",
+    "    data_mm_list = [[data[:,:,Subj_ID] for data in data_list] for data_list in nested_datalist[:-2]]\n",
+    "    feat_att_list, feat_unatt_list = nested_datalist[-2], nested_datalist[-1]\n",
+    "    feat_att_list = [feat_att[:,:,Subj_ID] for feat_att in feat_att_list] if np.ndim(feat_att_list[0]) == 3 else feat_att_list\n",
+    "    feat_unatt_list = [feat_unatt[:,:,Subj_ID] for feat_unatt in feat_unatt_list] if np.ndim(feat_unatt_list[0]) == 3 else feat_unatt_list\n",
+    "    GCCA_MM = algo.GeneralizedCCA_MultiMod(data_mm_list+[feat_att_list, feat_unatt_list], fs, L_list, offset_list, leave_out=2, n_components=n_components)\n",
+    "    res = []\n",
+    "    for trial_len in trial_len_list:\n",
+    "        print('Trial length: ', trial_len)\n",
+    "        isc_att, isc_unatt = GCCA_MM.att_or_unatt_LVO_trials(trial_len)\n",
+    "        acc, _, _, _, _= utils.eval_compete(isc_att, isc_unatt, TRAIN_WITH_ATT=True, nb_comp_into_account=nb_comp_into_account)\n",
+    "        res.append(acc)\n",
+    "    table_name = table_dir + f'{feat_name}_Acc_MM.csv'\n",
+    "    utils.save_acc_df(table_name, Subj_ID, trial_len_list, res, OVERWRITE)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Subj_ID = 0\n",
+    "nested_datalist = [modal_dict['EEG'], modal_dict['GAZE_V'], feat_att_list, feat_unatt_list]\n",
+    "L_list = [L_EEG, L_EEG, L_Stim, L_Stim]\n",
+    "offset_list = [offset_EEG, offset_EEG, offset_Stim, offset_Stim]\n",
+    "# nested_datalist = [modal_dict['EEG'], feat_att_list, feat_unatt_list]\n",
+    "# L_list = [L_EEG, L_Stim, L_Stim]\n",
+    "# offset_list = [offset_EEG, offset_Stim, offset_Stim]\n",
+    "pipe_att_or_unatt_gcca(Subj_ID, nested_datalist, fs, L_list, offset_list, nb_comp_into_account=3)"
    ]
   },
   {
