visual cortex vs other regions

--- a/Two_Obj_Ol.ipynb
+++ b/Two_Obj_Ol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,8 @@
     "import algo\n",
     "import pandas as pd\n",
     "import os\n",
+    "import random\n",
+    "import mne\n",
     "import seaborn as sns\n",
     "%matplotlib widget"
    ]
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,17 +615,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mne\n",
-    "montage = mne.channels.make_standard_montage('biosemi64')\n",
-    "# vis_collection = ['O2', 'Oz', 'O1', 'PO4', 'POz', 'PO3', 'P4', 'P2', 'Pz', 'P1', 'P3', 'CP2', 'CP1', 'C4', 'Cz', 'C3']\n",
-    "vis_collection = ['O2', 'Oz', 'O1', 'PO8', 'PO4', 'POz', 'PO3', 'PO7']\n",
-    "vis_collection_indices = [montage.ch_names.index(ch) for ch in vis_collection]\n",
-    "data = modal_dict['EEG']\n",
-    "eeg_subset = [eeg[:,vis_collection_indices,:] for eeg in data]\n",
-    "for Subj_ID in Subj_Set:\n",
-    "    pipe_att_or_unatt_LVO(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, TRAIN_WITH_ATT=True, SAVERES=True, table_dir=table_dirs['EEG'], OVERWRITE=True, feat_name='Subset-OF')\n",
-    "    pipe_compete_trials_LVO(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name='Subset-OF')"
+    "# Note: lz is added to the parietal_occipital region\n",
+    "region_dict = {\n",
+    "    'frontal': ['Fp1', 'AF7', 'AF3', 'F1', 'F3', 'F5', 'F7', 'Fpz', 'Fp2', 'AF8', 'AF4', 'AFz', 'Fz', 'F2', 'F4', 'F6', 'F8'],\n",
+    "    'frontal_central': ['FC5', 'FC3', 'FC1', 'C1', 'C3', 'C5', 'FC6', 'FC4', 'FC2', 'FCz', 'Cz', 'C2', 'C4', 'C6'],\n",
+    "    'temporal': ['FT7', 'T7', 'TP7', 'FT8', 'T8', 'TP8'],\n",
+    "    'central_parietal': ['CP5', 'CP3', 'CP1', 'P1', 'P3', 'P5', 'P7', 'P9', 'Pz', 'CPz', 'CP6', 'CP4', 'CP2', 'P2', 'P4', 'P6', 'P8', 'P10'],\n",
+    "    'parietal_occipital': ['PO7', 'PO3', 'POz', 'PO4', 'PO8', 'O1', 'Oz', 'O2', 'Iz'],\n",
+    "    'selected': ['PO7', 'POz', 'PO4', 'Oz']\n",
+    "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "montage = mne.channels.make_standard_montage('biosemi64')\n",
+    "for region in region_dict.keys():\n",
+    "    vis_collection = region_dict[region]\n",
+    "    vis_collection_indices = [montage.ch_names.index(ch) for ch in vis_collection]\n",
+    "    data = modal_dict['EEG']\n",
+    "    eeg_subset = [eeg[:,vis_collection_indices,:] for eeg in data]\n",
+    "    for Subj_ID in Subj_Set:\n",
+    "        pipe_att_or_unatt_LVO(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, TRAIN_WITH_ATT=True, SAVERES=True, table_dir=table_dirs['EEG'], OVERWRITE=True, feat_name=region+'-OF')\n",
+    "        pipe_compete_trials_LVO(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=region+'-OF')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "montage = mne.channels.make_standard_montage('biosemi64')\n",
+    "for run in range(10):\n",
+    "    # remove the channels in the parietal_occipital region\n",
+    "    collection_refined = [ch for ch in montage.ch_names if ch not in region_dict['parietal_occipital']]\n",
+    "    vis_collection = random.sample(collection_refined, 4)\n",
+    "    print(vis_collection, '####################################################')\n",
+    "    vis_collection_indices = [montage.ch_names.index(ch) for ch in vis_collection]\n",
+    "    data = modal_dict['EEG']\n",
+    "    eeg_subset = [eeg[:,vis_collection_indices,:] for eeg in data]\n",
+    "    for Subj_ID in Subj_Set:\n",
+    "        pipe_att_or_unatt_LVO(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, TRAIN_WITH_ATT=True, SAVERES=True, table_dir=table_dirs['EEG'], OVERWRITE=True, feat_name=f'Run-{run}-Rand4Ref-OF')\n",
+    "        pipe_compete_trials_LVO(Subj_ID, eeg_subset, feat_att_list, feat_unatt_list, fs, L_EEG, L_Stim, offset_EEG, offset_Stim, trial_len_list, table_dirs['EEG'], OVERWRITE=True, feat_name=f'Run-{run}-Rand4Ref-OF')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -724,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,28 +831,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def regress_out_confounds(data_list, feat_att_list, feat_unatt_list, confound_list, L_data, L_Stim, offset_data, offset_Stim):\n",
-    "    '''\n",
-    "    Regressing confound (modality to be controlled) out of the data and features\n",
-    "    '''\n",
-    "    data_reg = utils.further_regress_out_list(data_list, confound_list, L_data, L_data, offset_data, offset_data)\n",
-    "    feat_att_reg = utils.further_regress_out_list(feat_att_list, confound_list, L_Stim, L_data, offset_Stim, offset_data)\n",
-    "    feat_unatt_reg = utils.further_regress_out_list(feat_unatt_list, confound_list, L_Stim, L_data, offset_Stim, offset_data)\n",
-    "    return (data_reg, feat_att_reg, feat_unatt_reg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg_dict = {'EEG-EOG': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['EOG'], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
-    "             'EEG-GAZE_V': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['GAZE_V'], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
-    "             'GAZE_V-EEG': regress_out_confounds(modal_dict['GAZE_V'], feat_att_list, feat_unatt_list, modal_dict['EEG'], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
-    "             'EEG-EOG&GAZE_V': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, comb_dict['EOG+GAZE_V'][0], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
-    "             'EOG-GAZE_V': regress_out_confounds(modal_dict['EOG'], feat_att_list, feat_unatt_list, modal_dict['GAZE_V'], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
-    "             'GAZE_V-EOG': regress_out_confounds(modal_dict['GAZE_V'], feat_att_list, feat_unatt_list, modal_dict['EOG'], L_EEG, L_Stim, offset_EEG, offset_Stim)}"
+    "reg_dict = {'EEG-EOG': utils.regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['EOG'], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
+    "             'EEG-GAZE_V': utils.regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['GAZE_V'], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
+    "             'GAZE_V-EEG': utils.regress_out_confounds(modal_dict['GAZE_V'], feat_att_list, feat_unatt_list, modal_dict['EEG'], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
+    "             'EEG-EOG&GAZE_V': utils.regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, comb_dict['EOG+GAZE_V'][0], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
+    "             'EOG-GAZE_V': utils.regress_out_confounds(modal_dict['EOG'], feat_att_list, feat_unatt_list, modal_dict['GAZE_V'], L_EEG, L_Stim, offset_EEG, offset_Stim),\n",
+    "             'GAZE_V-EOG': utils.regress_out_confounds(modal_dict['GAZE_V'], feat_att_list, feat_unatt_list, modal_dict['EOG'], L_EEG, L_Stim, offset_EEG, offset_Stim)}"
    ]
   },
   {
@@ -955,9 +984,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_gcca_dict_SO = {'EEG-EOG': regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, modal_dict_SO['EOG'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
-    "             'EEG-GAZE_V': regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, modal_dict_SO['GAZE_V'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
-    "             'EEG-EOG&GAZE_V': regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, comb_dict_SO['EOG+GAZE_V'][0], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0)}"
+    "reg_gcca_dict_SO = {'EEG-EOG': utils.regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, modal_dict_SO['EOG'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
+    "             'EEG-GAZE_V': utils.regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, modal_dict_SO['GAZE_V'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
+    "             'EEG-EOG&GAZE_V': utils.regress_out_confounds(modal_dict_SO['EEG'], feat_list_SO, feat_list_SO, comb_dict_SO['EOG+GAZE_V'][0], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0)}"
    ]
   },
   {
@@ -1010,9 +1039,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg_gcca_dict = {'EEG-EOG': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['EOG'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
-    "             'EEG-GAZE_V': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['GAZE_V'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
-    "             'EEG-EOG&GAZE_V': regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, comb_dict['EOG+GAZE_V'][0], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0)}"
+    "reg_gcca_dict = {'EEG-EOG': utils.regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['EOG'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
+    "             'EEG-GAZE_V': utils.regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, modal_dict['GAZE_V'], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0),\n",
+    "             'EEG-EOG&GAZE_V': utils.regress_out_confounds(modal_dict['EEG'], feat_att_list, feat_unatt_list, comb_dict['EOG+GAZE_V'][0], L_data=5, L_Stim=1, offset_data=2, offset_Stim=0)}"
    ]
   },
   {
@@ -1036,6 +1065,92 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Greedy channel selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GCCA = algo.GeneralizedCCA(reg_gcca_dict['EEG-EOG&GAZE_V'][0], fs, L=1, offset=0, dim_list=None, n_components=10, signifi_level=False)\n",
+    "_, corr_test_fold, _, cov_test_fold, _, _, sig_corr_fold, sig_corr_pool, forward_model_fold = GCCA.cross_val_LVO()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FM_ORG=[5 ,2]\n",
+    "forward_model_fold = [utils.F_organize(forward_model, FM_ORG[0], FM_ORG[1]) for forward_model in forward_model_fold]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# forward_model_fold = [np.abs(fm) for fm in forward_model_fold]\n",
+    "forward_model = [np.mean(forward_model_fold, axis=0)]\n",
+    "top_idx = np.argsort((forward_model[0][:,0]))[-12:]\n",
+    "top_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mne\n",
+    "montage = mne.channels.make_standard_montage('biosemi64')\n",
+    "[montage.ch_names[i] for i in top_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greedy_selection(eeg_multisub_list, confound_list, fs, forward_model=None, kth_MC=1, L=5, offset=2, n_components=10, comp=1, signifi_level=False, trials=False, max_ch=None):\n",
+    "    nb_channel = eeg_multisub_list[0].shape[1]\n",
+    "    if max_ch is None:\n",
+    "        max_ch = nb_channel\n",
+    "    cc = np.zeros((max_ch, n_components+2))\n",
+    "    columns = ['#channel'] + ['CC'+str(i+1) for i in range(n_components)] + ['TSC(top4)']\n",
+    "    if not os.path.exists('tables/GCCA/ChannelSelection'):\n",
+    "        os.makedirs('tables/GCCA/ChannelSelection')\n",
+    "    if forward_model is not None:\n",
+    "        fm_comp = forward_model[:,comp-1]\n",
+    "        rank_idx = np.argsort(np.abs(fm_comp))[::-1]\n",
+    "        file_name = 'GreedyComp_' + str(comp) + '.csv'\n",
+    "    else:\n",
+    "        rank_idx = np.random.permutation(nb_channel)\n",
+    "        file_name = 'RandSele_' + str(kth_MC) + '.csv'\n",
+    "    for i in range(1, max_ch+1):\n",
+    "        print('Selected Channels: ', rank_idx[:i])\n",
+    "        eeg_channel = [eeg[:,rank_idx[:i],:] for eeg in eeg_multisub_list]\n",
+    "        GCCA = algo.GeneralizedCCA(eeg_channel, fs, L=L, offset=offset, n_components=n_components, signifi_level=signifi_level, trials=trials)\n",
+    "        _, corr_test, _, _, _, tsc_test, _, _, _, _ = GCCA.cross_val()\n",
+    "        cc[i-1,0] = i\n",
+    "        cc[i-1,1:n_components+1] = np.average(corr_test, axis=0)\n",
+    "        cc[i-1,-1] = np.average(tsc_test)\n",
+    "        print('tsc_test: ', np.average(tsc_test))\n",
+    "        df_cca = pd.DataFrame(cc, columns = columns)\n",
+    "        df_cca.to_csv('tables/GCCA/ChannelSelection/'+file_name, index=False)\n",
+    "    ISC_1st = cc[:,1]\n",
+    "    return rank_idx, ISC_1st"
+   ]
   },
   {
    "cell_type": "markdown",
